# eva_mars

./: README.md
eva_mars/: CMakeLists.txt  package.xml
eva_mars_control/: CMakeLists.txt  package.xml
eva_mars_control/config/: eva_mars_control.yaml
eva_mars_control/launch/: eva_mars_control.launch
eva_mars_control/scripts/: sondaj_control.py
eva_mars_description/: CMakeLists.txt  package.xml
eva_mars_description/meshes/: base_taban.stl  drill.stl  drillbox.stl  model.stl  realsense.stl  wheel.stl
eva_mars_description/rviz/: rtab.rviz  urdf.rviz
eva_mars_description/urdf/: eva_mars.urdf
eva_mars_simulation/: CMakeLists.txt  package.xml
eva_mars_simulation/launch/: eva_gazebo_emptyworld.launch  eva_rviz.launch  eva_rviz_standalone.launch  pointcloud_to_scan.launch
hector_gazebo/: README.md
hector_gazebo/hector_gazebo_plugins/: CMakeLists.txt
hector_gazebo/hector_gazebo_plugins/src/: diffdrive_plugin_6w.cpp
